n-vm-macros/tests/compile_fail/unknown_backend.rs
// SPDX-License-Identifier: Apache-2.0
// Copyright Open Network Fabric Authors

#[n_vm::in_vm(not_a_real_backend)]
fn unknown_backend() {}

fn main() {}